# WikiAI-rust

./: README.md  requirments.txt  run.py  test.txt
app/: routes.py  utils.py
backend/: Cargo.toml  README.MD  main.py  requirments.txt
backend/app/: __init__.py  config.py  models.py  resources.py  utils.py
backend/src/: api.rs  lib.rs  main.rs  openai.rs  scraper.rs
frontend/: package-lock.json
frontend/src/app/: app.component.html  app.component.ts
frontend/src/app/components/ai-input/ai-input/: ai-input.component.html  ai-input.component.spec.ts  ai-input.component.ts
frontend/src/app/interfaces/: wiki-query.ts
frontend/src/app/services/: ai-input.service.spec.ts  ai-input.service.ts
