[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
scraper = "0.22.0"
openai_api_rust = "0.1.9"
serde_json = "1.0.135"
langchain-rust = { version = "4.6.0", features = ["qdrant"] }
tokio = "1.42.0"
futures-util = "0.3.31"
