[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["blocking"] }
escraper = {version = "0.22.0", package="scraper"}
openai_api_rust = "0.1.9"
serde_json = "1.0.135"
langchain-rust = { version = "4.6.0", features = ["qdrant"] }
tokio = { version="1.42.0", features=["full"] }
futures-util = "0.3.31"
tower="0.4"
axum="0.7"
anyhow="1"
serde = "1.0.217"
tower-http = {version = "0.6.2", features = ["cors"]}
http = "1.2.0"

